--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Digital Clock</title>
- <link rel="stylesheet" href="style.css">
+  <title>Time Based Digital Clock</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Digital Clock</h1>
   <div id="clock"></div>
+  <div id="date"></div>
 
-  <script src="script.js"></script>
+  <script src="script.js" >
+   
+  </script>
 </body>
 </html>
